--- a/src/main/webapp/VIEW/addIc.xhtml
+++ b/src/main/webapp/VIEW/addIc.xhtml
@@ -21,7 +21,9 @@
                     <p:outputPanel class="form-control">
                         <div class="field col-12 md:col-4">
                             <p:outputLabel for="input_ic_date" value="#{I18N['icPage.visitDate']}"/>
-                            <p:datePicker id="input_ic_date" value="#{icBean.ic.icDate}" monthNavigator="true" yearNavigator="true" yearRange="1945:2100"/>
+                            <p:datePicker id="input_ic_date" value="#{icBean.ic.icDate}" monthNavigator="true" yearNavigator="true" yearRange="1945:2100">
+                                <p:ajax event="change" process="@this" update="@all" listener="#{icBean.testDate()}"/>
+                            </p:datePicker>
                         </div>
                         <div class="ui-message ui-message-error ui-widget ui-corner-all #{icBean.messageErrorIcDate}">
                             <div><span class="ui-message-error-icon"> </span>
@@ -32,7 +34,8 @@
                         <span class="field col-12 md:col-4 p-20-0">
                             <p:outputLabel for="input_protocole_version" value="#{I18N['icPage.protocoleVersion']}"/>
                             <p:inputText id="input_protocole_version" class="label" value="#{icBean.ic.protVers}"
-                                         placeholder="#{I18N['icPage.protocoleVersion.placeholder']}"/>
+                                         placeholder="#{I18N['icPage.protocoleVersion.placeholder']}"
+                                         required="true"/>
                         </span>
                         <div class="ui-message ui-message-error ui-widget ui-corner-all #{icBean.messageErrorVsProt}">
                             <div><span class="ui-message-error-icon"> </span>
@@ -48,6 +51,7 @@
                                               itemValue="#{true}"/>
                                 <f:selectItem itemLabel="#{I18N['notEligible']}"
                                               itemValue="#{false}"/>
+                                <p:ajax process="@this" update="@all"/>
                             </p:selectOneMenu>
                         </span>
                         <div class="ui-message ui-message-error ui-widget ui-corner-all #{icBean.messageErrorIeNotMeet}">
@@ -62,7 +66,8 @@
                                         value="#{I18N['messageErrorIeNotMeetNa']}"/></span>
                             </div>
                         </div>
-                        <span class="field col-12 md:col-4 p-20-0">
+                        <p:outputPanel rendered="#{!icBean.ic.eligYn}">
+                            <span class="field col-12 md:col-4 p-20-0">
                             <p:outputLabel for="inputIeNotMete" value="#{I18N['icPage.ie_not_met']}"/>
                             <p:selectOneMenu id="inputIeNotMete"
                                              value="#{icBean.ic.ieNotMet}"
@@ -80,18 +85,20 @@
                                                itemValue="#{ieNotMet}"/>
                             </p:selectOneMenu>
                         </span>
-                        <div class="ui-message ui-message-error ui-widget ui-corner-all #{icBean.messageErrorIeNotMeet}">
-                            <div><span class="ui-message-error-icon"> </span>
-                                <span class="ui-message-error-detail"><h:outputText
-                                        value="#{I18N['messageErrorIeNotMeet']}"/></span>
+                            <div class="ui-message ui-message-error ui-widget ui-corner-all #{icBean.messageErrorIeNotMeet}">
+                                <div><span class="ui-message-error-icon"> </span>
+                                    <span class="ui-message-error-detail"><h:outputText
+                                            value="#{I18N['messageErrorIeNotMeet']}"/></span>
+                                </div>
                             </div>
-                        </div>
-                        <div class="ui-message ui-message-error ui-widget ui-corner-all #{icBean.messageErrorIeNotMeetNa}">
-                            <div><span class="ui-message-error-icon"> </span>
-                                <span class="ui-message-error-detail"><h:outputText
-                                        value="#{I18N['messageErrorIeNotMeetNa']}"/></span>
+                            <div class="ui-message ui-message-error ui-widget ui-corner-all #{icBean.messageErrorIeNotMeetNa}">
+                                <div><span class="ui-message-error-icon"> </span>
+                                    <span class="ui-message-error-detail"><h:outputText
+                                            value="#{I18N['messageErrorIeNotMeetNa']}"/></span>
+                                </div>
                             </div>
-                        </div>
+                        </p:outputPanel>
+
                     </p:outputPanel>
                     <span class="responsiveSubmit">
                         <p:commandButton value="#{I18N['icPage.addIcTitle']}"
