--- a/src/main/webapp/VIEW/addVs.xhtml
+++ b/src/main/webapp/VIEW/addVs.xhtml
@@ -104,6 +104,8 @@
                                              value="#{vsBean.vs.heightU}"
                                              converter="HeightUConverter"
                                              required="true">
+                                <f:selectItem itemLabel="#{I18N['vsPage.height.unit']}"
+                                              itemValue="#{null}"/>
                                 <!-- import all enum -->
                                 <p:importEnum type="com.sym022.sym022.enums.HeightU"
                                               var="enumHeight"
@@ -112,8 +114,8 @@
                                                var="Height"
                                                itemLabel="#{Height.getHeightU()}"
                                                itemValue="#{Height}"/>
-                                <p:ajax event="blur" process="@this" update="@all" listener="#{vsBean.testRangeHeightCm()}"/>
-                                <p:ajax event="blur" process="@this" update="@all" listener="#{vsBean.testRangeHeightInches()}"/>
+                                <p:ajax event="change" process="@this" update="@all" listener="#{vsBean.testRangeHeightCm()}"/>
+                                <p:ajax event="change" process="@this" update="@all" listener="#{vsBean.testRangeHeightInches()}"/>
                             </p:selectOneMenu>
                         </span>
                                 <div class="ui-message ui-message-error ui-widget ui-corner-all #{vsBean.messageErrorHeightCm}">
@@ -171,6 +173,8 @@
                                              value="#{vsBean.vs.weightU}"
                                              converter="WeightUConverter"
                                              required="true">
+                                <f:selectItem itemLabel="#{I18N['vsPage.weight.unit']}"
+                                              itemValue="#{null}"/>
                                 <!-- import all enum -->
                                 <p:importEnum type="com.sym022.sym022.enums.WeightU"
                                               var="enumWeight"
@@ -179,8 +183,8 @@
                                                var="Weight"
                                                itemLabel="#{Weight.getWeightU()}"
                                                itemValue="#{Weight}"/>
-                                <p:ajax event="blur" process="@this" update="@all" listener="#{vsBean.testRangeWeightKg()}"/>
-                                <p:ajax event="blur" process="@this" update="@all" listener="#{vsBean.testRangeWeightPounds()}"/>
+                                <p:ajax event="change" process="@this" update="@all" listener="#{vsBean.testRangeWeightKg()}"/>
+                                <p:ajax event="change" process="@this" update="@all" listener="#{vsBean.testRangeWeightPounds()}"/>
                             </p:selectOneMenu>
                             </span>
                             <div class="ui-message ui-message-error ui-widget ui-corner-all #{vsBean.messageErrorWeightKg}">
@@ -213,7 +217,7 @@
                                     <p:outputLabel for="input_sbp" value="#{I18N['vsPage.input_sbp']}"/>
                                     <p:inputNumber id="input_sbp" class="label" value="#{vsBean.vs.sbp}"
                                            placeholder="#{I18N['vsPage.input_sbp.placeholder']}"
-                                           validatorMessage="#{I18N['vsPage.input_sbp.errorMessage']}">
+                                           validatorMessage="#{I18N['vsPage.input_sbp.errorMessage']}" decimalPlaces="1">
                                         <p:ajax update="messageSbp" event="blur"/>
                                         <p:ajax event="change" process="@this" update="@all" listener="#{vsBean.testDbpGtnSbp()}"/>
                                         <p:ajax event="change" process="@this" update="@all" listener="#{vsBean.testDbp()}"/>
@@ -236,7 +240,7 @@
                                     <p:outputLabel for="input_dbp" value="#{I18N['vsPage.input_dbp']}"/>
                                     <p:inputNumber id="input_dbp" class="label" value="#{vsBean.vs.dbp}"
                                            placeholder="#{I18N['vsPage.input_dbp.placeholder']}"
-                                           validatorMessage="#{I18N['vsPage.input_dbp.errorMessage']}">
+                                           validatorMessage="#{I18N['vsPage.input_dbp.errorMessage']}" decimalPlaces="1">
                                         <p:ajax update="messageDbp" event="blur"/>
                                         <p:ajax event="change" process="@this" update="@all" listener="#{vsBean.testDbpGtnSbp()}"/>
                                         <p:ajax event="change" process="@this" update="@all" listener="#{vsBean.testDbp()}"/>
@@ -273,7 +277,7 @@
                                 <p:outputLabel for="input_hr" value="#{I18N['vsPage.input_hr']}"/>
                                 <p:inputNumber id="input_hr" class="label" value="#{vsBean.vs.hr}"
                                                placeholder="#{I18N['vsPage.input_hr.placeholder']}"
-                                               validatorMessage="#{I18N['vsPage.input_hr.errorMessage']}">
+                                               validatorMessage="#{I18N['vsPage.input_hr.errorMessage']}" decimalPlaces="1">
                                     <p:ajax update="messagehr" event="blur"/>
                                     <p:ajax event="blur" process="@this" update="@all" listener="#{vsBean.testHr()}"/>
                                 </p:inputNumber>
@@ -302,7 +306,7 @@
                                 <p:outputLabel for="input_rr" value="#{I18N['vsPage.input_rr']}"/>
                                 <p:inputNumber id="input_rr" class="label" value="#{vsBean.vs.rr}"
                                                placeholder="#{I18N['vsPage.input_rr.placeholder']}"
-                                               validatorMessage="#{I18N['vsPage.input_rr.errorMessage']}">
+                                               validatorMessage="#{I18N['vsPage.input_rr.errorMessage']}" decimalPlaces="0">
                                     <p:ajax update="messagerr" event="blur"/>
                                     <p:ajax event="blur" process="@this" update="@all" listener="#{vsBean.testRr()}"/>
                                 </p:inputNumber>
@@ -331,7 +335,7 @@
                                     <p:outputLabel for="input_temp" value="#{I18N['vsPage.input_temp']}"/>
                                     <p:inputNumber id="input_temp" class="label" value="#{vsBean.vs.temp}"
                                                placeholder="#{I18N['vsPage.input_temp.placeholder']}"
-                                               validatorMessage="#{I18N['vsPage.input_temp.errorMessage']}">
+                                               validatorMessage="#{I18N['vsPage.input_temp.errorMessage']}" decimalPlaces="1">
                                     <p:ajax update="messagetemp" event="blur"/>
                                     <p:ajax event="change" process="@this" update="@all" listener="#{vsBean.testRangeTempC()}"/>
                                     <p:ajax event="change" process="@this" update="@all" listener="#{vsBean.testRangeTempF()}"/>
@@ -356,6 +360,8 @@
                                                  value="#{vsBean.vs.tempU}"
                                                  converter="TempUConverter"
                                                  required="true">
+                                    <f:selectItem itemLabel="#{I18N['vsPage.tempU']}"
+                                                  itemValue="#{null}"/>
                                 <!-- import all enum -->
                                     <p:importEnum type="com.sym022.sym022.enums.TempU"
                                                   var="enumTempU"
@@ -364,8 +370,8 @@
                                                    var="Temp"
                                                    itemLabel="#{Temp.getTempU()}"
                                                    itemValue="#{Temp}"/>
-                                    <p:ajax event="blur" process="@this" update="@all" listener="#{vsBean.testRangeTempC()}"/>
-                                    <p:ajax event="blur" process="@this" update="@all" listener="#{vsBean.testRangeTempF()}"/>
+                                    <p:ajax event="change" process="@this" update="@all" listener="#{vsBean.testRangeTempC()}"/>
+                                    <p:ajax event="change" process="@this" update="@all" listener="#{vsBean.testRangeTempF()}"/>
                                 </p:selectOneMenu>
                             </span>
                                 <div class="ui-message ui-message-error ui-widget ui-corner-all #{vsBean.messageErrorTempC}">
@@ -413,7 +419,7 @@
                             <p:outputLabel for="input_oxy" value="#{I18N['vsPage.input_oxy']}"/>
                             <p:inputNumber id="input_oxy" class="label" value="#{vsBean.vs.temp}"
                                            placeholder="#{I18N['vsPage.input_oxy.placeholder']}"
-                                           validatorMessage="#{I18N['vsPage.input_oxy.errorMessage']}">
+                                           validatorMessage="#{I18N['vsPage.input_oxy.errorMessage']}" decimalPlaces="1">
                                 <p:ajax update="messageoxy" event="blur"/>
                                 <p:ajax event="blur" process="@this" update="@all" listener="#{vsBean.testOxy()}"/>
                             </p:inputNumber>
