--- a/src/main/webapp/VIEW/addAe.xhtml
+++ b/src/main/webapp/VIEW/addAe.xhtml
@@ -32,8 +32,7 @@
                         <span class="field col-12 md:col-4 p-20-0">
                             <p:outputLabel for="input_aetermc" value="#{I18N['aePage.aetermc']}"/>
                             <p:inputText id="input_aetermc" class="label" value="#{aeBean.ae.aetermc}"
-                                         placeholder="#{I18N['aePage.aetermc.placeHolder']}"
-                                         validatorMessage="#{I18N['aePage.aetermc.errorMessage']}">
+                                         placeholder="#{I18N['aePage.aetermc.placeHolder']}">
                                 <p:ajax update="messageInputAetermc" event="blur"/>
                             </p:inputText>
                         </span>
